@@ -1,8 +1,8 @@
-import pytest
+from arrow import Arrow
 
 from holidata.utils import (
-    Weekday, Month, SmartDayArrow, SmartDayArrowWrapper, 
-    SmartDayArrowDayShifter, SmartDayArrowWeekdayShifter,
+    Weekday, Month,
+    DateWrapper, DayShifter, WeekdayShifter,
     date, day, first, second, third, fourth, last
 )
 
@@ -34,71 +34,21 @@ class TestMonthEnum:
         assert Month.DECEMBER == 12
 
 
-class TestSmartDayArrow:
-    def test_shift_to_weekday_forward_basic(self):
-        # 2023-01-01 is a Sunday
-        base_date = SmartDayArrow(2023, 1, 1)
-        # Get the first Monday after (2023-01-02)
-        result = base_date.shift_to_weekday(Weekday.MONDAY, order=1, reverse=False, including=False)
-        assert result.year == 2023
-        assert result.month == 1
-        assert result.day == 2
-        assert result.weekday() == Weekday.MONDAY
-
-    def test_shift_to_weekday_reverse_basic(self):
-        # 2023-01-01 is a Sunday
-        base_date = SmartDayArrow(2023, 1, 1)
-        # Get the first Saturday before (2023-12-31 of previous year)
-        result = base_date.shift_to_weekday(Weekday.SATURDAY, order=1, reverse=True, including=False)
-        assert result.year == 2022
-        assert result.month == 12
-        assert result.day == 31
-        assert result.weekday() == Weekday.SATURDAY
-
-    def test_shift_to_weekday_including_current(self):
-        # 2023-01-01 is a Sunday
-        base_date = SmartDayArrow(2023, 1, 1)
-        # Get the first Sunday including current date
-        result = base_date.shift_to_weekday(Weekday.SUNDAY, order=1, reverse=False, including=True)
-        assert result.year == 2023
-        assert result.month == 1
-        assert result.day == 1
-        assert result.weekday() == Weekday.SUNDAY
-
-    def test_shift_to_weekday_order_greater_than_one(self):
-        # 2023-01-01 is a Sunday
-        base_date = SmartDayArrow(2023, 1, 1)
-        # Get the second Monday after (2023-01-09)
-        result = base_date.shift_to_weekday(Weekday.MONDAY, order=2, reverse=False, including=False)
-        assert result.year == 2023
-        assert result.month == 1
-        assert result.day == 9
-        assert result.weekday() == Weekday.MONDAY
-
-    def test_shift_to_weekday_invalid_order(self):
-        base_date = SmartDayArrow(2023, 1, 1)
-        with pytest.raises(ValueError, match="Order must be greater than 0"):
-            base_date.shift_to_weekday(Weekday.MONDAY, order=0, reverse=False, including=False)
-
-        with pytest.raises(ValueError, match="Order must be greater than 0"):
-            base_date.shift_to_weekday(Weekday.MONDAY, order=-1, reverse=False, including=False)
-
-
-class TestSmartDayArrowWrapper:
+class TestArrowWrapper:
     def test_wrapper_creation(self):
-        wrapper = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 1))
+        wrapper = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 1))
         assert wrapper.default_func is not None
 
     def test_wrapper_callable(self):
-        wrapper = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 1))
+        wrapper = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 1))
         result = wrapper(2023)
-        assert isinstance(result, SmartDayArrow)
+        assert isinstance(result, Arrow)
         assert result.year == 2023
         assert result.month == 1
         assert result.day == 1
 
     def test_is_a_method(self):
-        wrapper = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 2))  # 2023-01-02 is a Monday)
+        wrapper = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 2))  # 2023-01-02 is a Monday)
         predicate = wrapper.is_a(Weekday.MONDAY)
         assert predicate(2023) is True
         
@@ -106,7 +56,7 @@ class TestSmartDayArrowWrapper:
         assert predicate(2023) is False
 
     def test_is_not_a_method(self):
-        wrapper = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 2))  # 2023-01-02 is a Monday)
+        wrapper = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 2))  # 2023-01-02 is a Monday)
         predicate = wrapper.is_not_a(Weekday.TUESDAY)
         assert predicate(2023) is True
         
@@ -114,7 +64,7 @@ class TestSmartDayArrowWrapper:
         assert predicate(2023) is False
 
     def test_is_one_of_method(self):
-        wrapper = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 2))  # 2023-01-02 is a Monday)
+        wrapper = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 2))  # 2023-01-02 is a Monday)
         predicate = wrapper.is_one_of([Weekday.MONDAY, Weekday.TUESDAY])
         assert predicate(2023) is True
         
@@ -122,7 +72,7 @@ class TestSmartDayArrowWrapper:
         assert predicate(2023) is False
 
     def test_is_none_of_method(self):
-        wrapper = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 2))  # 2023-01-02 is a Monday)
+        wrapper = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 2))  # 2023-01-02 is a Monday)
         predicate = wrapper.is_none_of([Weekday.TUESDAY, Weekday.WEDNESDAY])
         assert predicate(2023) is True
         
@@ -130,9 +80,9 @@ class TestSmartDayArrowWrapper:
         assert predicate(2023) is False
 
     def test_is_equal_to_method(self):
-        wrapper1 = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 2))
-        wrapper2 = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 2))
-        wrapper3 = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 3))
+        wrapper1 = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 2))
+        wrapper2 = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 2))
+        wrapper3 = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 3))
         
         predicate = wrapper1.is_equal_to(wrapper2)
         assert predicate(2023) is True
@@ -141,9 +91,9 @@ class TestSmartDayArrowWrapper:
         assert predicate(2023) is False
 
     def test_is_not_equal_to_method(self):
-        wrapper1 = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 2))
-        wrapper2 = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 2))
-        wrapper3 = SmartDayArrowWrapper(default=lambda year: SmartDayArrow(year, Month.JANUARY, 3))
+        wrapper1 = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 2))
+        wrapper2 = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 2))
+        wrapper3 = DateWrapper(default=lambda year: Arrow(year, Month.JANUARY, 3))
         
         predicate = wrapper1.is_not_equal_to(wrapper3)
         assert predicate(2023) is True
@@ -155,18 +105,18 @@ class TestSmartDayArrowWrapper:
 class TestDateFunction:
     def test_date_function_creates_wrapper(self):
         wrapper = date(Month.JANUARY, 1)
-        assert isinstance(wrapper, SmartDayArrowWrapper)
+        assert isinstance(wrapper, DateWrapper)
         assert wrapper.default_func is not None
 
 
 class TestDayFunctionAndShifter:
     def test_day_function_creates_shifter(self):
         shifter = day(5)
-        assert isinstance(shifter, SmartDayArrowDayShifter)
+        assert isinstance(shifter, DayShifter)
         assert shifter.day_count == 5
 
     def test_day_shifter_before(self):
-        base_date_func = lambda year: SmartDayArrow(year, Month.JANUARY, 10)
+        base_date_func = lambda year: Arrow(year, Month.JANUARY, 10)
         shifter = day(3).before(base_date_func)
         result = shifter(2023)
         assert result.year == 2023
@@ -174,7 +124,7 @@ class TestDayFunctionAndShifter:
         assert result.day == 7  # 10 - 3 = 7
 
     def test_day_shifter_after(self):
-        base_date_func = lambda year: SmartDayArrow(year, Month.JANUARY, 10)
+        base_date_func = lambda year: Arrow(year, Month.JANUARY, 10)
         shifter = day(3).after(base_date_func)
         result = shifter(2023)
         assert result.year == 2023
@@ -185,35 +135,35 @@ class TestDayFunctionAndShifter:
 class TestWeekdayShifter:
     def test_first_weekday_shifter(self):
         shifter = first(Weekday.MONDAY)
-        assert isinstance(shifter, SmartDayArrowWeekdayShifter)
+        assert isinstance(shifter, WeekdayShifter)
         assert shifter.weekday == Weekday.MONDAY
         assert shifter.order == 1
         assert shifter.forward is True
 
     def test_second_weekday_shifter(self):
         shifter = second(Weekday.TUESDAY)
-        assert isinstance(shifter, SmartDayArrowWeekdayShifter)
+        assert isinstance(shifter, WeekdayShifter)
         assert shifter.weekday == Weekday.TUESDAY
         assert shifter.order == 2
         assert shifter.forward is True
 
     def test_third_weekday_shifter(self):
         shifter = third(Weekday.WEDNESDAY)
-        assert isinstance(shifter, SmartDayArrowWeekdayShifter)
+        assert isinstance(shifter, WeekdayShifter)
         assert shifter.weekday == Weekday.WEDNESDAY
         assert shifter.order == 3
         assert shifter.forward is True
 
     def test_fourth_weekday_shifter(self):
         shifter = fourth(Weekday.THURSDAY)
-        assert isinstance(shifter, SmartDayArrowWeekdayShifter)
+        assert isinstance(shifter, WeekdayShifter)
         assert shifter.weekday == Weekday.THURSDAY
         assert shifter.order == 4
         assert shifter.forward is True
 
     def test_last_weekday_shifter(self):
         shifter = last(Weekday.FRIDAY)
-        assert isinstance(shifter, SmartDayArrowWeekdayShifter)
+        assert isinstance(shifter, WeekdayShifter)
         assert shifter.weekday == Weekday.FRIDAY
         assert shifter.order == 1
         assert shifter.forward is False
@@ -228,7 +178,7 @@ class TestWeekdayShifter:
         assert result.weekday() == Weekday.MONDAY
 
     def test_weekday_shifter_before_method(self):
-        base_date_func = lambda year: SmartDayArrow(year, Month.JANUARY, 15)
+        base_date_func = lambda year: Arrow(year, Month.JANUARY, 15)
         shifter = first(Weekday.MONDAY).before(base_date_func)
         result = shifter(2023)
         # First Monday before 2023-01-15 is 2023-01-09
@@ -238,7 +188,7 @@ class TestWeekdayShifter:
         assert result.weekday() == Weekday.MONDAY
 
     def test_weekday_shifter_after_method(self):
-        base_date_func = lambda year: SmartDayArrow(year, Month.JANUARY, 15)
+        base_date_func = lambda year: Arrow(year, Month.JANUARY, 15)
         shifter = first(Weekday.MONDAY).after(base_date_func)
         result = shifter(2023)
         # First Monday after 2023-01-15 is 2023-01-16
