@@ -1,3 +1,4 @@
+- #155 Remove helper class SmartDayArrow
 - #154 Replace custom date functions with DSL functions
 - #153 Fix date filtering in holiday generator
 - #152 AU: Fix dates for Grand Final Eve (Victoria)
